# cpp-template

./: CMakeLists.txt  Makefile
.github/workflows/: multi-platform.yaml
cpp_structure/tools/: named_tools.cpp  named_tools.h  tools.cpp
cpp_template/tools/: CMakeLists.txt
executables/: print_hello.cpp
